test/files/pos/t12393/R1.java
// javaVersion: 9+
public interface R1 {

    private void foo() {
        return;
    }
}
