test/files/neg/t10260/IA.java
public interface IA {
    void foo(A a);
}
